# voyageai-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  lint.yml  security.yaml
tests/: _local_test_utils.py  test_client.py  test_client_async.py  test_client_local.py  test_client_local_async.py  test_client_multimodal.py  test_connection_retry.py  test_embedding.py  test_import_order.py  test_metadata_headers.py  test_unit.py  test_video_utils.py
voyageai/: __init__.py  _base.py  api_requestor.py  chunking.py  client.py  client_async.py  embeddings.py  embeddings_object.py  embeddings_utils.py  error.py  util.py  version.py  video_utils.py  voyage_object.py  voyage_response.py  voyageai_object.py  voyageai_response.py
voyageai/api_resources/: __init__.py  api_requestor.py  api_resource.py  contextualized_embedding.py  embedding.py  multimodal_embedding.py  reranking.py  response.py  voyage_object.py
voyageai/api_resources/abstract/: __init__.py  api_resource.py  engine_api_resource.py
voyageai/datalib/: numpy_helper.py  pandas_helper.py
voyageai/local/: __init__.py  helpers.py  model_registry.py  sentence_transformer_backend.py
voyageai/object/: __init__.py  contextualized_embeddings.py  embeddings.py  multimodal_embeddings.py  reranking.py
