[tool.poetry]
name = "voyageai"
version = "0.3.9"
description = ""
authors = ["Yujie Qian <yujieq@voyageai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.15"
requests = "*"
aiohttp = "*"
tenacity = "*"
numpy = [
    {version = "*", python = ">=3.9,<3.13"},
    {version = ">=2.1.0", python = ">=3.13,<3.15"}
]
aiolimiter = "*"
pillow = "*"
pydantic = ">=1.10.8"
tokenizers = ">=0.14.0"
langchain-text-splitters = ">=0.3.8"
ffmpeg-python = "*"
sentence-transformers = {version = ">=3.0.0", optional = true}
torch = {version = ">=2.9.0", optional = true}

[tool.poetry.extras]
local = ["sentence-transformers", "torch"]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
ruff = "^0.6.0"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["voyageai", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require external dependencies or API)",
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"