[tool.poetry]
name = "voyageai"
version = "0.4.1"
description = ""
authors = ["Yujie Qian <yujieq@voyageai.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.15"
requests = "*"
aiohttp = "*"
tenacity = "*"
numpy = [
    {version = "*", python = ">=3.9,<3.13"},
    {version = ">=2.1.0", python = ">=3.13,<3.15"}
]
aiolimiter = "*"
pillow = "*"
pydantic = ">=2.7.4"
tokenizers = ">=0.14.0"
langchain-text-splitters = ">=0.3.8"
ffmpeg-python = {version = "*", optional = true}
sentence-transformers = {version = ">=5.0.0", optional = true, python = ">=3.10"}
torch = {version = ">=2.9.0", optional = true, python = ">=3.10"}
transformers = {version = ">=4.41.0,<5.0.0", optional = true, python = ">=3.10"}
# scipy is pulled in transitively by sentence-transformers (via scikit-learn).
# Pin a modern floor: scipy 1.6.1 declares `Requires-Python: >=3.7` with no
# upper bound, so the resolver otherwise selects it for 3.13/3.14, where it has
# no wheels and fails to build from source. 1.14.1 is the first release with
# cp313 wheels; newer releases cover 3.14. (Only needed for the local extra,
# which itself requires Python >=3.10.)
scipy = {version = ">=1.14.1", optional = true, python = ">=3.10"}

[tool.poetry.extras]
video = ["ffmpeg-python"]
local = ["sentence-transformers", "torch", "transformers", "scipy"]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
ruff = "^0.6.0"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["voyageai", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require external dependencies or API)",
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"